# zaksway-kafka-mcp

./: README.md  docker-compose.yml  main.py  pyproject.toml
.claude/: settings.json
.claude/hooks/: confirm_mcp.py
.github/workflows/: publish.yml
src/zaksway_kafka_mcp/: __init__.py  __main__.py
tests/: smoke_test.py
